# submark

./: .coveragerc  LICENSE  README.md  azure-pipelines.yml  pyproject.toml  submark.py  test_submark.py  tox.ini
submark/: __init__.py  cli.py  submark.py
tests/: test_submark.py
