[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "submark"
author = "Brian Okken"
author-email = ""
description-file = "README.md"
home-page = "https://github.com/okken/submark"
classifiers = ["License :: OSI Approved :: MIT License"]

[tool.flit.scripts]
submark = "submark:main"